# VaultX

./: .gitignore  BUILD.md  BUILDING.md  BUILD_COMPLETION_REPORT.md  BUILD_INDEX.md  BUILD_SUMMARY.txt  CROSS_PLATFORM_BUILD.md  Cargo.toml  DELIVERY_STATUS.md  INSTALL_WINDOWS.md  NPM_PUBLISHING_GUIDE.md  PLATFORM_BUILD.md  QUICKSTART.md  QUICK_START.md  README.md  TEST_AND_PUBLISH.md  build-all.bat  build-all.ps1  build-linux.sh  build-macos.sh  build-windows.sh  build.ps1  build.sh
.github/workflows/: release.yml
docs/: architecture.md
frontend/: CHANGES.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/install/: page.tsx
frontend/components/: VaultXHero.tsx  aurora-background.tsx
frontend/public/: manifest.json  robots.txt
npm/: .npmignore  README.md  package.json
npm/rust-src/: Cargo.toml
npm/rust-src/vx-cli/src/: error.rs  main.rs  storage.rs
npm/rust-src/vx-cli/src/commands/: audit.rs  init.rs  list.rs  list_secrets.rs
npm/rust-src/vx-core/src/: crypto.rs  error.rs  ssh.rs  vault.rs
npm/rust-src/vx-core/tests/: ssh_props.rs  ttl_props.rs
npm/scripts/: install.js  uninstall.js
vaultx/binaries/: vx-aarch64-apple-darwin  vx-x86_64-apple-darwin  vx-x86_64-unknown-linux-gnu
vx-cli/: Cargo.toml
vx-cli/src/: error.rs  input.rs  main.rs  session.rs  storage.rs
vx-cli/src/commands/: add.rs  audit.rs  edit.rs  get.rs  init.rs  list.rs  list_secrets.rs  login.rs  mod.rs  remove.rs  scp.rs  ssh.rs  update.rs
vx-core/: Cargo.toml
vx-core/src/: error.rs  lib.rs  ttl.rs  vault.rs  wasm.rs
vx-core/tests/: audit_props.rs  crypto_props.rs  ssh_props.rs  ttl_props.rs  vault_props.rs
wasm/: .gitkeep
