[workspace]
resolver = "2"
members = [
    "vx-cli",
    "vx-core",
]

[workspace.package]
version = "0.3.7"
edition = "2021"
authors = ["VaultX Team"]
license = "MIT"
repository = "https://github.com/vaultx/vaultx"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# CLI
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
tempfile = "3.10"

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.4"
