[package]
name = "vx-core"
version = "0.3.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for VaultX"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
wasm = []
